// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test users reducer should get message about a problem with authentication 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about nations list's not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about nations list's not finding 2`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about nations list's not finding 3`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should get message about units list's not finding 1`] = `
Object {
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should load nations list 1`] = `
Object {
  "errorMessage": "Pozytywna wiadomość z serwera!",
  "message": "Pozytywna wiadomość z serwera!",
  "nations": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "name": "Nacje Tzar",
    },
  ],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should load spells list 1`] = `
Object {
  "errorMessage": "Pozytywna wiadomość z serwera!",
  "message": "Pozytywna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "name": "Zaklęcia Tzar",
    },
  ],
  "technologies": Array [],
  "units": Array [],
}
`;

exports[`test users reducer should load technologies list 1`] = `
Object {
  "errorMessage": "Pozytywna wiadomość z serwera!",
  "message": "Pozytywna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "name": "Technologie Tzar",
    },
  ],
  "units": Array [],
}
`;

exports[`test users reducer should load units list 1`] = `
Object {
  "errorMessage": "Pozytywna wiadomość z serwera!",
  "message": "Pozytywna wiadomość z serwera!",
  "nations": Array [],
  "spells": Array [],
  "technologies": Array [],
  "units": Array [
    Object {
      "_id": "1111-2222-3333-4444",
      "name": "Jednostki Tzar",
    },
  ],
}
`;
